# template-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-all.sh  build.sh  change-compiler.sh  check-compilers.sh  check-env.sh  cleanup.sh  config.cmake  copy-template.sh  display.cpp  display.hpp  files.txt  generate-cmakelists.sh  generate-flags.sh  generate-makefile.sh  main.cpp
src/: display.cpp  main.cpp
